--- a/landing.html
+++ b/landing.html
@@ -32,205 +32,357 @@
 </head>
 
 <body>
-  <a href="https://www.google.com" class="navbar-brand">
-    FOODHUB
-  </a>
-  <a href="https://www.google.com">
-    Sign In
-  </a>
-  <a href="https://www.google.com">
-    <i class="fa fa-shopping-bag fa-lg"></i>
-  </a>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-  <h2>
-    Who delivers in your neighborhood?
-  </h2>
+        <a href="https://www.google.com" class="navbar-brand">
+          FOODHUB
+        </a>
+      </div>
+      <div class="collapse navbar-collapse"
+      id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="http://www.google.com">
+            Sign In
+          </a>
+        </li>
 
-  <form>
-    <div>
-      <label>
-        Enter your address below.
-      </label>
+        <li>
+          <a href="http://www.google.com">
+            <i class="fa fa-shopping-bag fa-lg"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-      <div>
-        <i class="fa fa-map-marker"></i>
+<div class="who-delivers container-fluid">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
 
-        <input type="text" placeholder="Street address, city, state">
+      <h2>
+        Who delivers in your neighborhood?
+      </h2>
+
+      <form>
+        <div class="form-group">
+          <label for="exampleInputAddress1">
+            Enter your address below.
+          </label>
+
+          <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">
+              <i class="fa fa-map-marker"></i>
+            </span>
+
+            <input type="text" class="form-control" id="exampleInputAddress1" placeholder="Street address, city, state">
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block">
+          Find Food
+        </button>
+      </form>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="how-to-foodhub container-fluid padding-inside-top-sm padding-inside-bottom-md">
+
+  <div class="row">
+
+    <div class="col-sm-12 text-center">
+      <h2>
+        How to Foodhub
+      </h2>
+
+      <p>
+        Ordering from your favorite restaurant is even easier than eating.
+      </p>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-sm-4 padding-inside-top-sm">
+        <img src="assets/images/map.jpg" class="img-circle-md spotlight-image margin-below-bottom-sm">
+
+        <h4>
+          The where
+        </h4>
+
+        <p>
+          Browse menus from your favorite local restaurants.
+        </p>
+      </div>
+
+      <div class="col-sm-4 padding-inside-top-sm">
+        <img src="assets/images/menu.jpg" class="img-circle-md spotlight-image margin-below-bottom-sm">
+        <h4>
+          The what
+        </h4>
+        <p>
+          Select what you want to eat. Submit your order.
+        </p>
+      </div>
+
+      <div class="col-sm-4 padding-inside-top-sm">
+        <img src="assets/images/delivery.jpg" class="img-circle-md spotlight-image margin-below-bottom-sm">
+
+        <h4>
+          The delivery
+        </h4>
+
+        <p>
+          Get the door and enjoy your food!
+        </p>
       </div>
     </div>
+  </div>
+</div>
+<div class="sound-bites container-fluid padding-inside-top-sm padding-inside-bottom-md">
 
-    <button type="submit">
-      Find Food
-    </button>
-  </form>
+  <div class="row">
+    <div class="col-sm-12 text-center">
 
-  <h2>
-    How to Foodhub
-  </h2>
+      <h2>
+        Sound bites
+      </h2>
+    </div>
+  </div>
 
-  <p>
-    Ordering from your favorite restaurant is even easier than eating.
-  </p>
+  <div class="col-sm-6 col-md-3 padding-inside-top-sm">
+    <div class="media">
+      <div class="media-left">
+        <a href="http://www.google.com">
+          <img src="assets/images/user-1.jpg" class="img-circle user-image">
+        </a>
+      </div>
 
-  <img src="assets/images/map.jpg">
+      <div class="media-body">
+        <p>
+          @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!
+        </p>
 
-  <h4>
-    The where
-  </h4>
+        <h4 class="media-heading">
+          @xtinacousins
+        </h4>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    Browse menus from your favorite local restaurants.
-  </p>
+  <div class="col-sm-6 col-md-3 padding-inside-top-sm">
+    <div class="media">
+      <div class="media-left">
+        <a href="http://www.google.com">
+          <img src="assets/images/user-2.jpg" class="img-circle user-image">
+        </a>
+      </div>
 
-  <img src="assets/images/menu.jpg">
+      <div class="media-body">
+        <p>
+          Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
+        </p>
 
-  <h4>
-    The what
-  </h4>
+        <h4 class="media-heading">
+          @udezekene
+        </h4>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    Select what you want to eat. Submit your order.
-  </p>
+  <div class="col-sm-6 col-md-3 padding-inside-top-sm">
+    <div class="media">
+      <div class="media-left">
+        <a href="http://www.google.com">
+          <img src="assets/images/user-3.jpg" class="img-circle user-image">
+        </a>
+      </div>
 
-  <img src="assets/images/delivery.jpg">
+      <div class="media-body">
+        <p>
+          Shout out to Foodhub for making my life so so easy.
+        </p>
 
-  <h4>
-    The delivery
-  </h4>
+        <h4 class="media-heading">
+          @adellecharles
+        </h4>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    Get the door and enjoy your food!
-  </p>
+  <div class="col-sm-6 col-md-3 padding-inside-top-sm">
+    <div class="media">
+      <div class="media-left">
+        <a href="http://www.google.com">
+          <img src="assets/images/user-4.jpg" class="img-circle user-image">
+        </a>
+      </div>
 
-  <h2>
-    Sound bites
-  </h2>
+      <div class="media-body">
+        <p>
+          Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
+        </p>
 
-  <img src="assets/images/user-1.jpg">
+        <h4 class="media-heading">
+          @vista
+        </h4>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!
-  </p>
+</div>
 
-  <h4>
-    @xtinacousins
-  </h4>
+</div>
 
-  <img src="assets/images/user-2.jpg">
 
-  <p>
-    Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
-  </p>
+<div class="download-apps container-fluid">
+  <div class="row text-center">
+    <div class="col-sm-6 col-sm-offset-3">
+      <h2>
+        Download apps
+      </h2>
 
-  <h4>
-    @udezekene
-  </h4>
+      <p class="lead">
+        Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
+      </p>
 
-  <img src="assets/images/user-3.jpg">
+      <img src="assets/images/app-store-badge.png" class="store-badge margin-below-bottom-xs">
 
-  <p>
-    Shout out to Foodhub for making my life so so easy.
-  </p>
 
-  <h4>
-    @adellecharles
-  </h4>
+      <img src="assets/images/google-play-badge.png" class="store-badge margin-below-bottom-xs">
 
-  <img src="assets/images/user-4.jpg">
-
-  <p>
-    Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
-  </p>
-
-  <h4>
-    @vista
-  </h4>
-
-  <h2>
-    Download apps
-  </h2>
-
-  <p>
-    Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
-  </p>
-
-  <img src="assets/images/app-store-badge.png">
-
-  <img src="assets/images/google-play-badge.png">
-
-  <h2>Why order with Foodhub?</h2>
-
-  <img src="assets/images/gem.jpg">
-  <h4>Discover</h4>
-  <p>
-    We'll help you find hidden gems in your neighborhood.
-  </p>
-
-  <img src="assets/images/like.jpg">
-  <h4>Better</h4>
-  <p>
-    The more you use Foodhub, the better we are at making recommendations just for you.
-  </p>
-
-  <img src="assets/images/bite.jpg">
-  <h4>Food</h4>
-  <p>
-    Enjoy each bite all the more knowing your order supports local businesses.
-  </p>
-
-  <h2>About Foodhub</h2>
-
-  <p>Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.</p>
-
-  <h4>Sign up for special offers</h4>
-
-  <form>
-    <div>
-      <input type="email" placeholder="Email">
     </div>
 
-    <div>
-      <input type="number" placeholder="ZIP code">
+  </div>
+
+</div>
+
+<div class="why-order container-fluid padding-inside-top-sm padding-inside-bottom-md">
+
+  <div class="row">
+    <div class="col-sm-12 text-center">
+      <h2>Why order with Foodhub?</h2>
+    </div>
+  </div>
+
+  <div class="row text-center">
+    <div class="col-sm-4 padding-inside-top-sm ">
+      <img src="assets/images/gem.jpg" class="img-circle spotlight-image margin-below-bottom-sm">
+      <h4>Discover</h4>
+      <p>
+        We'll help you find hidden gems in your neighborhood.
+      </p>
     </div>
 
-    <button type="submit">Send me treats</button>
-  </form>
+    <div class="col-sm-4 padding-inside-top-sm ">
+      <img src="assets/images/like.jpg" class="img-circle spotlight-image margin-below-bottom-sm">
+      <h4>Better</h4>
+      <p>
+        The more you use Foodhub, the better we are at making recommendations just for you.
+      </p>
+    </div>
 
-  <h4>Get to know us</h4>
+    <div class="col-sm-4 padding-inside-top-sm ">
+      <img src="assets/images/bite.jpg" class="img-circle spotlight-image margin-below-bottom-sm">
+      <h4>Food</h4>
+      <p>
+        Enjoy each bite all the more knowing your order supports local businesses.
+      </p>
+    </div>
+  </div>
+</div>
 
-  <ul>
-    <li>About Grubhub</li>
-    <li>Our apps</li>
-    <li>Our blog</li>
-    <li>Careers</li>
-    <li>Investor relations</li>
-    <li>News</li>
-  </ul>
+<div class="about-foodhub container-fluid padding-inside-top-sm padding-inside-bottom-md">
+
+  <div class="row">
+
+    <div class="col-sm-6 text-center padding-inside-top-md">
+      <h2>About Foodhub</h2>
+    </div>
+
+    <div class="col-sm-6 padding-inside-top-sm">
+      <p>Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.</p>
+    </div>
+
+  </div>
+
+</div>
+<footer class="container-fluid padding-inside-top-sm padding-inside-bottom-md">
+
+  <div class="row">
+
+    <div class="col-sm-3 padding-inside-top-sm">
+      <h4>Sign up for special offers</h4>
+
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1" class="sr-only">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        </div>
+
+        <div class="form-group">
+          <label for="exampleInputZip1" class="sr-only">Password</label>
+          <input type="number" class="form-control" id="exampleInputZip1" placeholder="ZIP code">
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block">Send me treats</button>
+      </form>
+    </div>
 
 
-  <h4>Help</h4>
+    <div class="col-sm-3 padding-inside-top-sm">
+      <h4>Get to know us</h4>
 
-  <ul>
-    <li>FAQ</li>
-    <li>Contact us</li>
-  </ul>
-
-  <h4>Connect with us</h4>
-
-  <ul>
-    <li>Facebook</li>
-    <li>Twitter</li>
-    <li>Instagram</li>
-    <li>YouTube</li>
-  </ul>
+      <ul class="list-unstyled">
+        <li>About Grubhub</li>
+        <li>Our apps</li>
+        <li>Our blog</li>
+        <li>Careers</li>
+        <li>Investor relations</li>
+        <li>News</li>
+      </ul>
+    </div>
 
 
-  <h4>Partner with us</h4>
+    <div class="col-sm-3 padding-inside-top-sm">
+      <h4>Help</h4>
 
-  <ul>
-    <li>For restaurants</li>
-    <li>For drivers</li>
-    <li>For corporate accounts</li>
-  </ul>
+      <ul class="list-unstyled">
+        <li>FAQ</li>
+        <li>Contact us</li>
+      </ul>
+
+      <h4>Connect with us</h4>
+
+      <ul class="list-unstyled">
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Instagram</li>
+        <li>YouTube</li>
+      </ul>
+    </div>
+
+    <div class="col-sm-3 padding-inside-top-sm">
+      <h4>Partner with us</h4>
+
+      <ul class="list-unstyled">
+        <li>For restaurants</li>
+        <li>For drivers</li>
+        <li>For corporate accounts</li>
+      </ul>
+    </div>
+  </div>
+
+</footer>
 </body>
 </html>
